<resources>
    <string name="app_name">Stateful Pager</string>
    <string name="recycler_view_demo">RecyclerView Demo</string>
    <string name="start_loading">LOADING</string>
    <string name="end_loading_success">SUCCESS</string>
    <string name="end_loading_empty">EMPTY</string>
    <string name="end_loading_error">ERROR</string>
    <string name="switch_layout_manager">Switch Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="layout_manager">Layout Managers</string>

    <string name="desc_standard">Used in most cases and based on visibility switching, suit for \'FrameLayout\',\'RelativeLayout\',\'LinearLayout\' or \'ConstraintLayout\' etc.</string>
    <string name="desc_recycler">Used in \'RecyclerView\' and based on adapter delegating, it\'s animations have different behavior.</string>
    <string name="control_board">Control Board</string>
    <string name="state">States</string>
    <string name="animation">Animations</string>
    <string name="animation_empty">EMPTY</string>
    <string name="animation_fade">FADE</string>
    <string name="animation_scale">SCALE</string>
    <string name="animation_fade_scale">FADE SCALE</string>
    <string name="duration">Duration(ms)</string>
    <string name="number_0">0</string>
    <string name="number_100">100</string>
</resources>