<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/layout_manager"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/layoutManagerChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/check_linear"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/linear_layout_manager"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <com.google.android.material.chip.Chip
            android:id="@+id/check_grid"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_layout_manager"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>