<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:background="#f5f5f5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:contentPaddingBottom="12dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.cardview.widget.CardView
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:cardBackgroundColor="#e9e9e9"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/state"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:id="@+id/tabState"
                android:layout_height="wrap_content"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:tabUnboundedRipple="true">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_loading" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_success" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_empty" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_error" />
            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/animation"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:tabUnboundedRipple="true">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_loading" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_success" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_empty" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_loading_error" />
            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>